k8s-status.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-status-v1
  namespace: incubator
  labels:
    app: k8s-status-v1
    type: config
spec:
  replicas: 1
  revisionHistoryLimit: 3
  minReadySeconds: 20
  selector:
    matchLabels:
      app: k8s-status-v1
  template:
    metadata:
      name: k8s-status-v1
      namespace: incubator
      labels:
        app: k8s-status-v1
        type: status
    spec:
      nodeSelector:
        type: apps
      serviceAccountName: k8s-status-serviceaccount
      containers:
        - name: k8s-status-v1
          image: hangst/k8s-status
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 1G
              cpu: 1
            requests:
              memory: 512Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: k8s-status-v1
  namespace: incubator
spec:
  selector:
    app: k8s-status-v1
  ports:
    - name: k8s-status-v1-http
      protocol: TCP
      port: 80
      targetPort: 8080
  sessionAffinity: None
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-k8s-status-v1
  namespace: incubator
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/v1/status)$ $1/ redirect;
      rewrite ^/v1/status/(.*)$ /$1 break;
spec:
  rules:
    - host: my-host
      http:
        paths:
          - path: "/v1/status(/.*)?"
            backend:
              serviceName: k8s-status-v1
              servicePort: 80
